--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "shibui",
-  "version": "1.0.0",
-  "author": "quantumlyy",
-  "license": "MIT",
-  "private": false,
-  "scripts": {},
-  "files": [],
-  "dependencies": {},
-  "devDependencies": {},
-	"resolutions": {
-		"colors": "1.4.0"
-	},
-	"publishConfig": {
-		"access": "public"
-	},
-  "repository": "https://github.com/ShibuiDAO/shibui.git"
+ "name": "shibui",
+ "version": "1.0.0",
+ "author": "quantumlyy",
+ "license": "MIT",
+ "private": false,
+ "scripts": {},
+ "files": [],
+ "dependencies": {},
+ "devDependencies": {
+  "prettier": "^2.5.1",
+  "prettier-plugin-solidity": "^1.0.0-beta.19",
+  "pretty-quick": "^3.1.3",
+  "solhint-plugin-prettier": "^0.0.5"
+ },
+ "resolutions": {
+  "colors": "1.4.0"
+ },
+ "publishConfig": {
+  "access": "public"
+ },
+ "repository": "https://github.com/ShibuiDAO/shibui.git"
 }
