--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
  "files": [],
  "dependencies": {},
  "devDependencies": {
+  "@sapphire/eslint-config": "^4.2.0",
+  "@sapphire/ts-config": "^3.3.1",
+  "@types/node": "^17.0.17",
+  "@typescript-eslint/eslint-plugin": "^5.11.0",
+  "@typescript-eslint/parser": "^5.11.0",
+  "eslint": "^8.9.0",
   "prettier": "^2.5.1",
   "prettier-plugin-solidity": "^1.0.0-beta.19",
   "pretty-quick": "^3.1.3",
-  "solhint-plugin-prettier": "^0.0.5"
+  "solhint-plugin-prettier": "^0.0.5",
+  "typescript": "^4.5.5"
  },
  "resolutions": {
   "colors": "1.4.0"
