--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
 	"author": "quantumlyy",
 	"license": "MIT",
 	"private": false,
-	"scripts": {},
+	"scripts": {
+		"clean": "rimraf .shibui abis artifacts cache docs out",
+		"precompile": "yarn clean",
+		"compile": "yarn compile:hardhat",
+		"compile:hardhat": "hardhat compile"
+	},
 	"files": [],
-	"dependencies": {},
+	"dependencies": {
+		"ethers": "^5.5.4"
+	},
 	"devDependencies": {
+		"@nomiclabs/hardhat-ethers": "^2.0.5",
 		"@openzeppelin/contracts": "^4.5.0",
 		"@openzeppelin/contracts-upgradeable": "^4.5.1",
 		"@rari-capital/solmate": "^6.2.0",
@@ -17,10 +25,13 @@
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
 		"eslint": "^8.9.0",
+		"hardhat": "^2.8.4",
 		"prettier": "^2.5.1",
 		"prettier-plugin-solidity": "^1.0.0-beta.19",
 		"pretty-quick": "^3.1.3",
+		"rimraf": "^3.0.2",
 		"solhint-plugin-prettier": "^0.0.5",
+		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5"
 	},
 	"resolutions": {
