--- a/package.json
+++ b/package.json
@@ -16,22 +16,35 @@
 	},
 	"devDependencies": {
 		"@nomiclabs/hardhat-ethers": "^2.0.5",
+		"@nomiclabs/hardhat-waffle": "^2.0.2",
 		"@openzeppelin/contracts": "^4.5.0",
 		"@openzeppelin/contracts-upgradeable": "^4.5.1",
 		"@rari-capital/solmate": "^6.2.0",
 		"@sapphire/eslint-config": "^4.2.0",
 		"@sapphire/ts-config": "^3.3.1",
+		"@typechain/ethers-v5": "^9.0.0",
+		"@typechain/hardhat": "^4.0.0",
+		"@types/chai": "^4.3.0",
+		"@types/mocha": "^9.1.0",
 		"@types/node": "^17.0.17",
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
+		"chai": "^4.3.6",
 		"eslint": "^8.9.0",
+		"ethereum-waffle": "^3.4.0",
 		"hardhat": "^2.8.4",
+		"hardhat-abi-exporter": "^2.8.0",
+		"hardhat-gas-reporter": "^1.0.8",
+		"mocha": "^9.2.1",
+		"nyc": "^15.1.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-solidity": "^1.0.0-beta.19",
 		"pretty-quick": "^3.1.3",
 		"rimraf": "^3.0.2",
 		"solhint-plugin-prettier": "^0.0.5",
+		"solidity-coverage": "^0.7.20",
 		"ts-node": "^10.5.0",
+		"typechain": "^7.0.0",
 		"typescript": "^4.5.5"
 	},
 	"resolutions": {
