--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
 		"esModuleInterop": true,
 		"outDir": "dist"
 	},
-	"include": [],
+	"include": ["test/"],
 	"files": ["./hardhat.config.ts", "./networks.hardhat.ts"]
 }
