--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.11.0",
 		"@typescript-eslint/parser": "^5.11.0",
 		"chai": "^4.3.6",
+		"dotenv": "^16.0.0",
 		"eslint": "^8.9.0",
 		"ethereum-waffle": "^3.4.0",
 		"hardhat": "^2.8.4",
@@ -45,7 +46,8 @@
 		"solidity-coverage": "^0.7.20",
 		"ts-node": "^10.5.0",
 		"typechain": "^7.0.0",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.5",
+		"zod": "^3.11.6"
 	},
 	"resolutions": {
 		"colors": "1.4.0"
