--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"ethers": "^5.5.4"
 	},
 	"devDependencies": {
+		"@eth-optimism/contracts": "^0.5.15",
 		"@nomiclabs/hardhat-ethers": "^2.0.5",
 		"@nomiclabs/hardhat-waffle": "^2.0.2",
 		"@openzeppelin/contracts": "^4.5.0",
