feat: basic structure for governance based on Governor Bravo
Still in the process of porting/checking over Bravo to include/expand in Charlie

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,6 +4,6 @@
 		"allowJs": true,
 		"checkJs": true
 	},
-	"include": ["test/"],
+	"include": ["test/", "scripts/"],
 	"files": ["./config.hardhat.ts", "./hardhat.config.ts", "./networks.hardhat.ts"]
 }
