--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@nomiclabs/hardhat-waffle": "^2.0.2",
 		"@openzeppelin/contracts": "^4.5.0",
 		"@openzeppelin/contracts-upgradeable": "^4.5.1",
+		"@openzeppelin/hardhat-upgrades": "^1.14.0",
 		"@rari-capital/solmate": "^6.2.0",
 		"@sapphire/eslint-config": "^4.2.0",
 		"@sapphire/ts-config": "^3.3.1",
