--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
 		"esModuleInterop": true,
 		"outDir": "dist"
 	},
-	"include": ["test/"],
+	"include": ["test/", "scripts/"],
 	"files": ["./config.hardhat.ts", "./hardhat.config.ts", "./networks.hardhat.ts"]
 }
