--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"files": [],
 	"dependencies": {
-		"ethers": "^5.5.4"
+		"ethers": "^5.5.4",
+		"ora": "^6.1.0"
 	},
 	"devDependencies": {
 		"@eth-optimism/contracts": "^0.5.15",
