--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 	},
 	"files": [],
 	"dependencies": {
-		"ethers": "^5.5.4",
-		"ora": "^6.1.0"
+		"ethers": "^5.5.4"
 	},
 	"devDependencies": {
 		"@eth-optimism/contracts": "^0.5.15",
@@ -41,6 +40,7 @@
 		"hardhat-gas-reporter": "^1.0.8",
 		"mocha": "^9.2.1",
 		"nyc": "^15.1.0",
+		"ora": "^6.1.0",
 		"prettier": "^2.5.1",
 		"prettier-plugin-solidity": "^1.0.0-beta.19",
 		"pretty-quick": "^3.1.3",
