--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
 		"chai": "^4.3.6",
 		"dotenv": "^16.0.0",
 		"eslint": "^8.9.0",
+		"eth-sig-util": "^3.0.1",
 		"ethereum-waffle": "^3.4.0",
+		"ethereumjs-util": "^7.1.4",
+		"ethereumjs-wallet": "^1.0.2",
 		"hardhat": "^2.8.4",
 		"hardhat-abi-exporter": "^2.8.0",
 		"hardhat-gas-reporter": "^1.0.8",
