--- a/package.json
+++ b/package.json
@@ -8,52 +8,54 @@
 		"clean": "rimraf .shibui abis artifacts cache docs out",
 		"precompile": "yarn clean",
 		"compile": "yarn compile:hardhat",
-		"compile:hardhat": "hardhat compile"
+		"compile:hardhat": "hardhat compile",
+		"test:hardhat": "hardhat test --network hardhat",
+		"test:hardhat:coverage": "hardhat coverage --network hardhat"
 	},
 	"files": [],
 	"dependencies": {
 		"ethers": "^5.5.4"
 	},
 	"devDependencies": {
-		"@eth-optimism/contracts": "^0.5.15",
+		"@eth-optimism/contracts": "^0.5.16",
 		"@nomiclabs/hardhat-ethers": "^2.0.5",
-		"@nomiclabs/hardhat-waffle": "^2.0.2",
+		"@nomiclabs/hardhat-waffle": "^2.0.3",
 		"@openzeppelin/contracts": "^4.5.0",
-		"@openzeppelin/contracts-upgradeable": "^4.5.1",
-		"@openzeppelin/hardhat-upgrades": "^1.14.0",
+		"@openzeppelin/contracts-upgradeable": "^4.5.2",
+		"@openzeppelin/hardhat-upgrades": "^1.16.0",
 		"@rari-capital/solmate": "^6.2.0",
-		"@sapphire/eslint-config": "^4.2.0",
-		"@sapphire/ts-config": "^3.3.1",
+		"@sapphire/eslint-config": "^4.3.0",
+		"@sapphire/ts-config": "^3.3.2",
 		"@typechain/ethers-v5": "^9.0.0",
-		"@typechain/hardhat": "^4.0.0",
+		"@typechain/hardhat": "^5.0.0",
 		"@types/chai": "^4.3.0",
 		"@types/mocha": "^9.1.0",
-		"@types/node": "^17.0.17",
-		"@typescript-eslint/eslint-plugin": "^5.11.0",
-		"@typescript-eslint/parser": "^5.11.0",
+		"@types/node": "^17.0.21",
+		"@typescript-eslint/eslint-plugin": "^5.14.0",
+		"@typescript-eslint/parser": "^5.14.0",
 		"chai": "^4.3.6",
 		"dotenv": "^16.0.0",
-		"eslint": "^8.9.0",
+		"eslint": "^8.10.0",
 		"eth-sig-util": "^3.0.1",
 		"ethereum-waffle": "^3.4.0",
 		"ethereumjs-util": "^7.1.4",
 		"ethereumjs-wallet": "^1.0.2",
-		"hardhat": "^2.8.4",
+		"hardhat": "^2.9.1",
 		"hardhat-abi-exporter": "^2.8.0",
 		"hardhat-gas-reporter": "^1.0.8",
 		"mocha": "^9.2.1",
 		"nyc": "^15.1.0",
-		"ora": "5.4.1",
+		"ora": "~5.4.1",
 		"prettier": "^2.5.1",
 		"prettier-plugin-solidity": "^1.0.0-beta.19",
 		"pretty-quick": "^3.1.3",
 		"rimraf": "^3.0.2",
 		"solhint-plugin-prettier": "^0.0.5",
 		"solidity-coverage": "^0.7.20",
-		"ts-node": "^10.5.0",
-		"typechain": "^7.0.0",
-		"typescript": "^4.5.5",
-		"zod": "^3.11.6"
+		"ts-node": "^10.7.0",
+		"typechain": "^7.0.1",
+		"typescript": "^4.6.2",
+		"zod": "^3.13.4"
 	},
 	"resolutions": {
 		"colors": "1.4.0"
