refactor: extract constants

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,5 +5,5 @@
 		"checkJs": true
 	},
 	"include": ["test/", "scripts/"],
-	"files": ["./config.hardhat.ts", "./hardhat.config.ts", "./networks.hardhat.ts"]
+	"files": ["./config.hardhat.ts", "./hardhat.config.ts", "./networks.hardhat.ts", "./constants.ts"]
 }
