feat: deploy vestings

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"script:complete:frame": "hardhat run ./scripts/deployComplete.ts --network frame",
 		"script:shibui:frame": "hardhat run ./scripts/deployShibui.ts --network frame",
 		"script:suite:frame": "hardhat run ./scripts/deploySuiteAfterShibui.ts --network frame",
-		"script:oolong:frame": "hardhat run ./scripts/distributeOolongPairCreation.ts --network frame"
+		"script:oolong:frame": "hardhat run ./scripts/distributeOolongPairCreation.ts --network frame",
+		"script:vesting:frame": "hardhat run ./scripts/deployVesting.ts --network frame"
 	},
 	"files": [],
 	"dependencies": {
