feat: add script for bobadao distribution

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"script:shibui:frame": "hardhat run ./scripts/deployShibui.ts --network frame",
 		"script:suite:frame": "hardhat run ./scripts/deploySuiteAfterShibui.ts --network frame",
 		"script:oolong:frame": "hardhat run ./scripts/distributeOolongPairCreation.ts --network frame",
-		"script:vesting:frame": "hardhat run ./scripts/deployVesting.ts --network frame"
+		"script:vesting:frame": "hardhat run ./scripts/deployVesting.ts --network frame",
+		"script:bobadao:frame": "hardhat run ./scripts/distributeBobaDAO.ts --network frame"
 	},
 	"files": [],
 	"dependencies": {
