chore: distribute for IDO

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"script:oolong:frame": "hardhat run ./scripts/distributeOolongPairCreation.ts --network frame",
 		"script:vesting:frame": "hardhat run ./scripts/deployVesting.ts --network frame",
 		"script:bobadao:frame": "hardhat run ./scripts/distributeBobaDAO.ts --network frame",
-		"script:oolong_expansion:frame": "hardhat run ./scripts/distributeOolongLiquidityExpansion.ts --network frame"
+		"script:oolong_expansion:frame": "hardhat run ./scripts/distributeOolongLiquidityExpansion.ts --network frame",
+		"script:bobabrewery:frame": "hardhat run ./scripts/distributeBobaBreweryIDO.ts --network frame"
 	},
 	"files": [],
 	"dependencies": {
