feat: script to lock BRE and LP pools

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"script:vesting:frame": "hardhat run ./scripts/deployVesting.ts --network frame",
 		"script:bobadao:frame": "hardhat run ./scripts/distributeBobaDAO.ts --network frame",
 		"script:oolong_expansion:frame": "hardhat run ./scripts/distributeOolongLiquidityExpansion.ts --network frame",
-		"script:bobabrewery:frame": "hardhat run ./scripts/distributeBobaBreweryIDO.ts --network frame"
+		"script:bobabrewery:frame": "hardhat run ./scripts/distributeBobaBreweryIDO.ts --network frame",
+		"script:bre_lockout:frame": "hardhat run ./scripts/lockBREBuyback.ts --network frame"
 	},
 	"files": [],
 	"dependencies": {
